<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Config variables -->
    <string name="facebook_app_id">INSERT_KEY_HERE</string>

    <!-- URLs -->
    <string name="com_oursaviorgames">oursaviorgames.com</string>
    <string name="com_oursaviorgames_path_play">/play</string>

    <string name="app_name">OSGames</string>
    <string name="our_savior_games">Our Savior Games</string>
    <string name="feedback_email_hint">Your email (optional)</string>
    <string name="feedback_msg_hint">Message</string>
    <string name="feedback_send">Send feedback</string>
    <string name="feedback_submit_failed">Feedback submission failed</string>
    <string name="feedback_thanks">Thanks for your feedback</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="signIn">Sign In</string>
    <string name="title_facebook_login">Facebook</string>
    <string name="set_your_profile">Set your profile</string>
    <string name="done">Done</string>
    <string name="title_activity_cropper">CropperActivity</string>
    <string name="crop">Crop</string>
    <string name="random">Random</string>
    <string name="continu">Continue</string>
    <string name="trending">Trending</string>
    <string name="latest">Latest</string>
    <string name="last_played">Last Played</string>
    <string name="last_added">Last Added</string>
    <string name="account">Account</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="notifications_for_new_games">Notifications for new games</string>
    <string name="loop_video_playback">Loop video playback</string>
    <string name="information">Information</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Please wait…</string>
    <string name="clear_cache">Clear cache</string>
    <string name="empty_favorite_list">Nothing to see yet.\nAdd your favorite games.</string>
    <string name="empty_comment_list">Be the first\nto comment!</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="licenses">Licenses</string>
    <string name="found_on_osg">Found on OurSaviorGames.com</string>
    <string name="share_via">Share via</string>
    <string name="play_something">Resume your last game here.</string>
    <string name="clear_game_cache">Clear game cache</string>
    <string name="clear_game_cache_message">Clearing game cache might also delete your in-game progress.</string>
    <string name="comment_edit_text_hint">Write a comment…</string>
    <string name="menu">Menu</string>
    <string name="offline_not_available">Not available while offline</string>
    <string name="username_hint">Username</string>

    <!-- Comments contextual menu options -->
    <string name="comment_delete">Delete</string>
    <string name="comment_flag">Report</string>
    <string name="comment_copy_text">Copy</string>
    <string name="comment_flagged">Comment reported.</string>

    <!-- Error messages -->
    <string name="error">Error</string>
    <string name="error_send_comment">Failed to submit comment, please try again later.</string>
    <string name="error_delete_comment">Failed to delete comment, please try again later.</string>
    <string name="error_game_load_fail">Could not open game, please try again later.</string>
    <string name="error_clear_game_cache">Clearing cache failed, please try again later.</string>
    <string name="error_no_share_url">Sorry, this game doesn\'t have a share link.</string>
    <string name="error_retrieve_user_info">Could not load your profile, please try again later.</string>
    <string name="error_io">There is no network connection. Please try again later.</string>
    <string name="error_crop">Oops. Cropping image failed unexpectedly.</string>
    <string name="error_generic_login">There was an error while logging you in. Please try again later.</string>
    <string name="error_invalid_game_link">Invalid game link</string>

    <!-- UserSignUp errors -->
    <string name="error_save_profile_pic">Could not save your profile picture, please try again later.</string>
    <string name="error_username_end_with_period">You can\'t end your username with a period.</string>
    <string name="error_username_start_with_period">You can\'t start your username with a period.</string>
    <string name="error_username_multiple_period_underscore">You can\'t have more than one period or underscore in a row.</string>
    <string name="error_username_illegal_char">Username can only use letters, numbers, underscores, and periods.</string>
    <string name="error_username_too_short">Username too short, should at least 5 characters long.</string>

    <!-- Split strings -->
    <string name="v_the_user_name">The username</string>
    <string name="v_is_not_available">is not available.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_cat_walk">CatWalkActivity</string>
    <string name="title_activity_comment">CommentActivity</string>

</resources>
